--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,21 @@
   padding: 5px 10px;
   border: 1px solid #ccc;
 }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 255, 0.5);
+  padding: 10px 20px;
+}
+
+.navbar-brand {
+  margin-right: 30px;
+}
+
+.logo {
+  width: 90px !important;
+  height: 400px !important;
+}
