--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-.App {
+* {
   font-family: sans-serif;
+}
+
+.App {
   text-align: center;
 }
 
@@ -48,20 +51,44 @@
   border: 1px solid #ccc;
 }
 
+.pokemon-card-container {
+  transition: transform 0.3s;
+}
+
+.pokemon-card-container:hover {
+  transform: translateY(-7px);
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 255, 0.5);
+  border-bottom: solid 3px rgba(0, 0, 255, 0.5);
   padding: 10px 20px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .navbar-brand {
-  margin-right: 30px;
+  display: block;
+  width: 265px;
+  height: 95px;
+  background-image: url("../public/images/pokemon.png");
+  background-size: contain;
 }
 
-.logo {
-  width: 90px !important;
-  height: 400px !important;
+@media (max-width: 768px) {
+  .pokemon-card-container {
+    width: 100%;
+  }
+  .pokemon-card {
+    margin: 10px;
+  }
+  #generations {
+    width: 100%;
+  }
+  .navbar {
+    margin: 0;
+  }
 }
