--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@
 }
 
 .pokemon-card img {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
 }
 
 .pokemon-card h2 {
@@ -57,6 +57,10 @@
 
 .pokemon-card-container:hover {
   transform: translateY(-7px);
+}
+
+div.pokemon-card-container div.pokemon-card:hover {
+  box-shadow: 0px 5px 10px rgba(0, 0, 255, 0.5) !important;
 }
 
 .navbar {
